--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "async": "~0.2.8",
     "ejs": "^2.5.7",
     "express": "^3.21.2",
+    "passport": "^0.4.0",
+    "passport-fitbit-oauth2": "^1.0.2",
     "socket.io": "~0.9.14"
   },
   "scripts": {
