--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
     "async": "~0.2.8",
+    "body-parser": "^1.18.2",
     "current-date": "^0.1.1",
     "ejs": "^2.5.7",
     "express": "^3.21.2",
