--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fitbit-node": "^2.1.0",
     "passport": "^0.4.0",
     "passport-fitbit-oauth2": "^1.0.2",
+    "request": "^2.83.0",
     "socket.io": "~0.9.14"
   },
   "scripts": {
