--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
     "async": "~0.2.8",
+    "body-parser": "^1.18.2",
     "city-reverse-geocoder": "0.0.1",
     "current-date": "^0.1.1",
     "ejs": "^2.5.7",
@@ -17,6 +18,7 @@
     "fitbit-node": "^2.1.0",
     "passport": "^0.4.0",
     "passport-fitbit-oauth2": "^1.0.2",
+    "raw-body": "^2.3.2",
     "request": "^2.83.0",
     "socket.io": "~0.9.14"
   },
