--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "ejs": "^2.5.7",
     "express": "^3.21.2",
     "fitbit-node": "^2.1.0",
+    "nodemon": "^1.14.12",
     "passport": "^0.4.0",
     "passport-fitbit-oauth2": "^1.0.2",
     "raw-body": "^2.3.2",
     "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "socket.io": "~0.9.14"
   },
   "scripts": {
