--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Chris Maltais & Aidan Calverley <chris.maltais@queensu.ca>",
   "dependencies": {
+    "aos": "^2.2.0",
     "async": "~0.2.8",
     "city-reverse-geocoder": "0.0.1",
     "current-date": "^0.1.1",
