--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "async": "~0.2.8",
     "city-reverse-geocoder": "0.0.1",
     "current-date": "^0.1.1",
+    "dotenv": "^6.0.0",
     "ejs": "^2.5.7",
-    "express": "^3.21.2",
+    "express": "^4.16.3",
     "fitbit-node": "^2.1.0",
     "nodemon": "^1.14.12",
     "passport": "^0.4.0",
