--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   },
   "author": "Chris Maltais <chris.maltais@queensu.ca> & Aidan Calverley <aidan.calverley@gmail.com>",
   "dependencies": {
-    "aos": "^2.2.0",
+    "aos": "^2.3.4",
     "async": "~0.2.8",
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "city-reverse-geocoder": "0.0.1",
     "current-date": "^0.1.1",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
+    "express": "^4.17.0",
     "express-http-to-https": "^1.1.4",
-    "fitbit-node": "^2.1.0",
-    "nodemon": "^1.18.4",
-    "now-env": "^3.1.0",
+    "fitbit-node": "^2.2.0",
+    "nodemon": "^1.19.0",
+    "now-env": "^3.2.0",
     "passport": "^0.4.0",
-    "raw-body": "^2.3.3",
+    "raw-body": "^2.4.0",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.7"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "now-build": "node app.js"
   },
   "devDependencies": {},
   "license": "ISC",
